2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.desktop.in: Update name to fit HIG (bug 116916).

2003-06-24  William Jon McCann  <mccann@jhu.edu>

	* gnotski.c (new_move): Try not to use fixed length string buffer.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* gnotski.c: Fixed compiler warnings.

2003-06-12  William Jon McCann  <mccann@jhu.edu>

	* gnotski.c: Use pixbuf for tile images.  Tried to make coding
	style consistent.
	(gui_draw_pixmap): Clear tile to default background color
	before drawing pixbuf.

	* gnotski.png: Modified to use transparent background and
	alpha layer shadows.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c: i18n fixes from Christian Neumair (bug #114875).

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* gnotski.c: Removed separator from dialogs as in HIG.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-01-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fix the use of $DESTDIR, closing #102757. Also
	clean the EXTRA_DIST rule. Thanks to gdx@poczta.fm.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* gnotski.c: s/Gnome/GNOME/, for #99683.

2002-11-22  Tim Musson  <trmusson@ihug.co.nz>

	* gnotski.c: (about_cb), (score_cb), (game_score):
	No more multiple About dialogs, and Score dialog is now modal,
	fixing #97320 for gnotski. Also, About no longer pinches iagno's icon!

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnotski.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-11  Ross Burton  <ross@burtonini.com>

	* gnotski-icon.png: New icon contributed by Timothy Musson.

2002-09-29  Ross Burton  <ross@burtonini.com>
